# arc-image-to-model

./: .gitignore  .replit  DEPLOY_NOW.md  FIXES_APPLIED.md  MODELS_DIAGNOSTIC.md  QUICK_START.md  README.md  REPLIT_DEPLOYMENT.md  index.html  main.py  push_to_github.bat  pyproject.toml  replit.nix  requirements.txt  requirements_basic.txt  requirements_minimal.txt  run.py
app/: __init__.py  config.py  main.py
app/utils/: __init__.py  camera.py  depth.py  detection.py  geometry.py  model_export.py  segmentation.py  stitching.py  textures.py
backend/: requirements.txt  test_models.py
backend/app/: main.py
docs/: API.md  API_REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT.md  WORKFLOW.md
frontend/: index.html
models/: element_detector.py  room_stitcher.py  wall_detector.py
